fixed watchlist items spacing issue on mobile view

--- a/src/static/sass/components/watchlist-item.scss
+++ b/src/static/sass/components/watchlist-item.scss
@@ -92,8 +92,10 @@
 
 @include responsive(phone) {
   .watchlist-item {
+    width: 44%;
     .image-item img {
-      height: 15rem;
+      width: 100%;
+      height: 100%;
     }
   }
 }
