--- a/src/static/sass/pages/watchlist-page.scss
+++ b/src/static/sass/pages/watchlist-page.scss
@@ -9,7 +9,6 @@
 @include responsive(phone) {
   .watchlist-page {
     .watchlist-items {
-      padding: 0 1rem;
       justify-content: space-between;
     }
   }
